@@ -174,6 +174,16 @@ thetvdb.language=en
 thetvdb.dvd.episodes=false
 
 ######################################################
+## Kinopoisk plugin parameters
+#
+# Specifies the maximum plot length
+kinopoisk.plot.maxlength=400
+
+# Specifies preferred movie rating method
+# Valid values are: imdb, kinopoisk, average
+kinopoisk.rating=average
+
+######################################################
 ## OpenSubtitles plugin parameters
 #
 # the language used for downloading subtitle from opensubtitles.org
