@@ -10,6 +10,7 @@ MovieJukebox 1.0.16 beta
   - Fixed defect #433 Local fanart not handled correctly for Unknown TV series
   - Enhancement  #437 Improvements to multi-episode file support.
   - Enhancement  #442 Added proxy support
+  - Enhancement  #444 New plugin to retrieve movie data from Russian movie database www.kinopoisk.ru
   - Fixed defect #449 Trailers are not excluded from the Year categories
 
 MovieJukebox 1.0.15 beta
